[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "ngscrape"
version = "1.0.0"
description = "Newgrounds flash game scraper"
readme = "readme.md"
authors = [{ name = "aeiea", email = "dpthn@proton.me" }]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["flash", "newgrounds", "scraper"]
dependencies = ["beautifulsoup4", "requests"]
requires-python = ">=3.7"
[project.urls]
Homepage = "https://github.com/aeiea/ngscrape"
