[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "ngscrape"
version = "1.1.0"
description = "Newgrounds flash game scraper powered by bs4 and requests"
readme = "readme.md"
authors = [{ name = "aeiea", email = "dpthn@proton.me" }]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["flash", "newgrounds", "scraper", "games", "opensource"]
dependencies = ["beautifulsoup4", "requests"]
requires-python = ">=3.0"
[project.urls]
Homepage = "https://github.com/aeiea/ngscrape"
